<resources>
    <string name="app_name">My Campus</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="skip">Skip"-""-"">"</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    s
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit">Submit</string>
    <string name="link_to_server">http://192.168.43.15/review_sys/</string>
    <string name="log_out">Logout</string>
    <string name="enter_phone_number">Enter Email</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="have_otp">Have a OTP?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_place_details">Detalis</string>
    <string name="action_settings">Settings</string>
    <string name="description">Description</string>
    <string name="comment">Comment</string>
    <string name="sort">sort</string>
    <string name="my_campus">My Campus</string>
    <string name="my_places">My Places</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="splash_image">splash image</string>
    <string name="title_activity_maps">Map</string>
</resources>
