<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/g1">

        <item
            android:id="@+id/myProfile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />

    </group>

    <group android:id="@+id/g2">
        <item
            android:id="@+id/toMycampus"
            android:icon="@drawable/places"
            android:title="@string/my_campus" />

        <item
            android:id="@+id/toMyPlaces"
            android:icon="@drawable/my_places"
            android:title="@string/my_places" />
    </group>

    <group android:id="@+id/g3">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/log_out" />
    </group>

</menu>