<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/RelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.example.raunaksethiya.reviewsys1.LoginActivity">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/UserID_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <EditText
                    android:id="@+id/UserID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/Password_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignEnd="@+id/UserID_layout"
                android:layout_alignStart="@+id/UserID_layout"
                android:layout_below="@+id/UserID_layout"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/LoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/Password_layout"
                android:layout_alignStart="@id/Password_layout"
                android:layout_below="@+id/Password_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:onClick="VerifyLogin"
                android:text="@string/login" />

            <Button
                android:id="@+id/RegisterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/LoginButton"
                android:layout_alignStart="@id/LoginButton"
                android:layout_below="@+id/LoginButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:onClick="OpenRegistration"
                android:text="@string/register" />

            <TextView
                android:id="@+id/ForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/RegisterButton"
                android:layout_below="@+id/RegisterButton"
                android:layout_marginTop="15dp"
                android:text="@string/forgot_password"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#1f2ca7"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/SkipLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/RegisterButton"
                android:layout_below="@+id/RegisterButton"
                android:layout_marginTop="15dp"
                android:text="@string/skip"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/material_deep_teal_500"
                android:textStyle="bold" />

        </RelativeLayout>
    </ScrollView>


</android.support.design.widget.CoordinatorLayout>