<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileAcitivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/RelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:gravity="top"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            tools:context="com.example.raunaksethiya.reviewsys1.RegisterActivity">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/User_Name_Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/Phone_Num_Layout"
                android:layout_alignStart="@+id/Phone_Num_Layout"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/username_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/Name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Email_Layout"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/name_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/Email_Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/Name_layout"
                android:layout_alignStart="@+id/Name_layout"
                android:layout_below="@+id/User_Name_Layout"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/email_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/Sign_up"
                    android:layout_below="@+id/Sign_up"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/Phone_Num_Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/Email_Layout"
                android:layout_alignStart="@+id/Email_Layout"
                android:layout_below="@+id/Name_layout"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/phone_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/update_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/Phone_Num_Layout"
                android:layout_alignStart="@+id/Phone_Num_Layout"
                android:layout_below="@+id/Phone_Num_Layout"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:onClick="updateProfile"
                android:text="@string/update" />

            <Button
                android:id="@+id/back_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/update_profile"
                android:layout_alignStart="@+id/update_profile"
                android:layout_below="@+id/update_profile"
                android:onClick="goBackFromProfile"
                android:text="@string/back" />

        </RelativeLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
